# ChangeLog for net-mail/hotwayd
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/hotwayd/ChangeLog,v 1.7 2004/07/29 17:52:05 langthang Exp $

*hotwayd-0.7.4 (29 Jul 2004)

  29 Jul 2004; Tuan Van <langthang@gentoo.org> +hotwayd-0.7.4.ebuild:
  add hotwayd-0.7.4 wrt bug #58531.
  straight to stable.

  28 Jul 2004; Tuan Van <langthang@gentoo.org> hotwayd-0.8.ebuild:
  move inherit to above IUSE.

*hotwayd-0.8 (26 Jul 2004)

  26 Jul 2004; <malc@gentoo.org> +files/hotwayd-0.8-amd64.patch,
  +files/hotwayd-0.8.xinetd, +hotwayd-0.8.ebuild:
  Revbump, add fix to make md5 work on amd64, fixes bug #45567

*hotwayd-0.7.1 (20 Nov 2003)

  20 Nov 2003; Martin Holzer <mholzer@gentoo.org> hotwayd-0.5.3.ebuild,
  hotwayd-0.7.1.ebuild:
  Version bumped. Closes #31991.

  08 Jun 2003; Todd Berman <tberman@gentoo.org> hotwayd-0.5.3.ebuild:
  Fixed IUSE.

*hotwayd-0.5.3 (11 May 2003)

  11 May 2003; Todd Berman <tberman@gentoo.org> hotwayd-0.5.3.ebuild:
  Initial commit.
