@@ -1,5 +1,5 @@
-MD5 fa32cdc9eaa3fa6cb2fe13e858b944bd qmail-vmailmgr-0.0.1-r1.ebuild 557
-MD5 6ff65f907e299e2f9a0df96af8d71a80 ChangeLog 578
+MD5 e8547366306d642682f2dd610f6a0e42 qmail-vmailmgr-0.0.1-r1.ebuild 557
+MD5 24752c33a04be6118e2d90c4e5a29f7a ChangeLog 750
 MD5 5721b86fd871bdfab77231abc6e02f68 metadata.xml 161
 MD5 e4e7c93f4ee95d875affda51b197752d files/README 618
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-qmail-vmailmgr-0.0.1-r1 0
