@@ -1,6 +1,10 @@
 # ChangeLog for net-mail/hotwayd
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/hotwayd/ChangeLog,v 1.7 2004/07/29 17:52:05 langthang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/hotwayd/ChangeLog,v 1.8 2004/08/08 00:13:18 slarti Exp $
+
+  08 Aug 2004; Tom Martin <slarti@gentoo.org> hotwayd-0.7.4.ebuild,
+  hotwayd-0.8.ebuild:
+  Typo in DESCRIPTION: deamon -> daemon. Bug 59717.
 
 *hotwayd-0.7.4 (29 Jul 2004)
 
